--- a/index.html
+++ b/index.html
@@ -3,91 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homelo | Luxury Furniture Pakistan</title>
+    <title>Mirror Art | Luxury Furniture Pakistan</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <header>
-        <nav class="navbar"><div class="logo">
+<header>
+    <div class="navbar">
+        <div class="logo">
             <img src="pics/pic2.png" alt="logo" width="100">
-            <span>CLEAR REFLECTION</span>
+            <span>MIRROR ART</span>
         </div>
-            
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Living Room Mirrors</a></li>
-                <li><a href="#">Bathroom Mirrors</a></li>
-                <li><a href="#">Dressing Mirrors</a></li>
-                <li><a href="#">Bedroom Mirrors Mirrors</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a hef="#"></a></li>
-                <li><a hef="#"></a></li>
-            </ul>
-            <div class="cart-icon"></div>
-        </nav>
+    </div>
+
+    <ul class="nav-links">
+        <li><a href="#">Home</a></li>
         
-    </header>
+        <li class="dropdown">
+            <a href="#">Categories ▼</a>
+            <div class="dropdown-content">
+                <a href="#">Living Room Mirrors</a>
+                <a href="#">Bathroom Mirrors</a>
+                <a href="#">Dressing Mirrors</a>
+                <a href="#">Bedroom Mirrors</a>
+            </div>
+        </li>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Reflecting Your Finest Self</h1>
-            <p>Exquisite mirror design to brighten and broaden your living space.</p>
-            <a href="#" class="btn">Shop Now</a>
+        <li class="dropdown">
+            <a href="#">Materials ▼</a>
+            <div class="dropdown-content">
+                <a href="#">Wood Mirror</a>
+                <a href="#">Acrylic Mirror</a>
+                <a href="#">Decorative Mirror</a>
+                <a href="#">Bluetooth/LED Mirror</a>
+                <a href="#">Metal Mirror</a>
+            </div>
+        </li>
+
+        <li><a href="#contact-us">Contact Us</a></li>
+    </ul>
+</header>
+
+<section class="hero">
+    <div class="hero-content">
+        <h1>Reflecting Your Finest Self</h1>
+        <p>Exquisite mirror design to brighten and broaden your living space.</p>
+        <a href="#" class="btn">Shop Now</a>
+    </div>
+</section>
+
+<section class="products">
+    <h2>Mirror's Collection</h2>
+    <div class="product-grid">
+        <div class="product-card">
+            <img src="pics/pic3.png" alt="Mirror">
+            <h3>RIPPLE-Wavy Full-Length Mirror<br>Rs. 35,000</h3>
+            <button class="add-to-cart">Add to Cart</button>
         </div>
-    </section>
-
-    <section class="products">
-        <h2>Mirror's Collection</h2>
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="pics/pic3.png" alt="Sofa">
-                <h3>RIPPLE-Wavy Full-Length Mirror with Velvet Upholstery
-                Rs. 35,000</h3>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="pics/pic4.png" alt="Chair">
-                <h3>WHORL-Asymmetric Contemporary Style Mirror
-                    ₨ 32,000</h3>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="pics/pic5.png" alt="Table">
-                <h3>OAKLEN-Bohemian Style Asymmetric Wall Mirror
-                    ₨ 28,000</h3>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="pics/pic6.png" alt="Table">
-                <h3>VISTA-Arched Full Length Mirror with Black Wooden Frame
-                    ₨ 26,000</h3>
-
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="pics/pic7.png" alt="Table">
-                <h3>AURELIA-Vintage Style Wooden Carving mirror
-                    ₨ 28,000</h3>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="pics/pic8.png" alt="Table">
-                <h3>OAKLEN-Bohemian Style Asymmetric Wall Mirror
-                    ₨ 28,000</h3>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
+        <div class="product-card">
+            <img src="pics/pic4.png" alt="Mirror">
+            <h3>WHORL-Asymmetric Contemporary Style Mirror<br>₨ 32,000</h3>
+            <button class="add-to-cart">Add to Cart</button>
         </div>
-    </section>
+        <div class="product-card">
+            <img src="pics/pic5.png" alt="Mirror">
+            <h3>OAKLEN-Bohemian Style Asymmetric Wall Mirror<br>₨ 28,000</h3>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="pics/pic6.png" alt="Mirror">
+            <h3>VISTA-Arched Full Length Mirror<br>₨ 26,000</h3>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        </div>
+</section>
 
-    <footer>
-        <p></p>
-    </footer>
+<section id="contact-us" style="padding: 100px 5%; text-align: center; background: #111;">
+    <h2 style="color: #b8860b; margin-bottom: 30px;">Get In Touch</h2>
+    <form style="max-width: 600px; margin: auto; display: flex; flex-direction: column; gap: 15px;">
+        <input type="text" placeholder="Name" style="padding: 10px; background: #000; border: 1px solid #b8860b; color: #fff;">
+        <input type="email" placeholder="Email" style="padding: 10px; background: #000; border: 1px solid #b8860b; color: #fff;">
+        <textarea placeholder="Message" rows="5" style="padding: 10px; background: #000; border: 1px solid #b8860b; color: #fff;"></textarea>
+        <button type="submit" class="btn">Send</button>
+    </form>
+</section>
 
-    <script src="script.js"></script>
+
+
+
+
+<footer>
+    <p>&copy; Mirror Art - Luxury Redefined</p>
+</footer>
+
 </body>
 </html>
